fix: Slide video on iOS, heading text on all slides

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1329,7 +1329,7 @@ margin-bottom: 100px;
 @media (max-aspect-ratio: 16/9) {
   #background-video {
     width: auto;
-    height: 100%;
+    /*height: 100%;*/
   }
 }
 
